# Smart-AgenticRAG

./: .gitignore  README.md  ingestion.py  main.py  pyproject.toml
graph/: consts.py  graph.py  state.py
graph/chains/: generations.py  retrieval_grader.py
graph/chains/tests/: test_chains.py
graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
